tests/baselines/reference/typecheckCommaExpression.errors.txt
tests/cases/compiler/typecheckCommaExpression.ts(1,2): error TS2304: Cannot find name 'a'.
tests/cases/compiler/typecheckCommaExpression.ts(1,2): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/compiler/typecheckCommaExpression.ts(1,5): error TS2304: Cannot find name 'b'.


==== tests/cases/compiler/typecheckCommaExpression.ts (3 errors) ====
    (a, b)
     ~
!!! error TS2304: Cannot find name 'a'.
     ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
        ~
!!! error TS2304: Cannot find name 'b'.